# task-test

./: Makefile  README.md  cli.py  color.py  main.py  pyproject.toml
command/: base.py  grep.py
command/grep/: __init__.py  base.py  factory.py  grep.py  input_processor.py  output.py
match/: __init__.py  base.py  pattern_matcher.py
python_grep/: cli.py  main.py
python_grep/grep/: __init__.py  base.py  context.py  exceptions.py  factory.py  grep.py  input_processor.py  output.py
python_grep/match/: __init__.py  base.py  pattern_matcher.py
python_grep/storage/: __init__.py  base.py  file_reader.py  path_resolver.py
storage/: base.py  file_finder.py  file_reader.py  path_resolver.py  text_format_reader.py
storage/base/: reader.py  type.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_cli.py
tests/unit/command/grep/: test_factory.py  test_grep.py  test_input_processor.py  test_output.py
tests/unit/grep/: test_factory.py  test_grep.py  test_output.py
tests/unit/match/: test_pattern_matcher.py
tests/unit/storage/: test_file_reader.py  test_path_resolver.py
