[tool.poetry]
name = "hyperexponential_task"
version = "0.1.0"
description = ""
authors = ["Jan Król <jk.jankrol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79