[tool.poetry]
name = "python_grep"
version = "0.1.0"
description = ""
authors = ["Jan Król <jk.jankrol@gmail.com>"]

[tool.poetry.scripts]
pygrep = "python_grep.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
black = "^24.4.2"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
bandit = "^1.7.8"
pytest-cov = "^5.0.0"
Flake8-pyproject = "^1.2.3"
tomli = "^2.0.1"
exceptiongroup = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
ignore = ["E203", "W503"]

[tool.bandit]
skips = ["B101"]